--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,51 +2,39 @@ body {
   max-width: 100%;
 }
 
-div {
+[contenteditable="true"]:focus {
+    outline: none;
 }
 
 
-// .verytop {
-//   width: 100%;
-//   height: 80px;
-// }
-
-
-
-
-
-
-
-
 .header {
-  width: 100%;
+  width: 116.688em;
   height: 80px;
-  border: 1px solid black;
+  // border: 1px solid black;
 }
 
 
 .topcontent1{
-  width: 1300px;
+  width: 1050px;
   height: 80px;
-  display: flex;
-  margin: 0px;
+  // display: inline-block;
+  margin: 0 auto;
   box-sizing: border-box;
-  border: 1px solid black;
-  margin-left: 70px;
-  margin-right: 70px;
+  // border: 1px solid black;
 }
 
 .logo {
   width: 100px;
   height: 50px;
-  // display: inline-block;
-  border: 1px solid black;
+  display: inline-block;
+  // border: 1px solid black;
   margin-right: 15px;
-  padding-top: 20px;
+  padding-top: 15px;
+  text-align: center;
   & a{
-    color: orange;
+    color: #F67000;
     text-decoration: none;
-    font-size: 45px;
+    font-size: 30px;
   }
 
 }
@@ -54,9 +42,10 @@ div {
 .searchbar {
   width: 350px;
   height: 50px;
-  // display: inline-block;
-  border: 1px solid black;
+  display: inline-block;
+  // border: 1px solid black;
   padding-top: 20px;
+  vertical-align: middle;
   & input {
     box-sizing: border-box;
     float: left;
@@ -64,7 +53,7 @@ div {
     &.button {
       width: 100px;
       height: 35px;
-      border-radius: 0 6px 6px 0;
+      border-radius: 0 0.3em 0.3em 0;
       background-color: #51A6C1;
       color: white;
       border: none;
@@ -73,25 +62,105 @@ div {
     &.search {
       width: 250px;
       height: 35px;
-      border-radius: 6px 0 0 6px;
-      border: none;
+      border-radius: 0.3em 0 0 0.3em;
+      border: 1px solid gray;
     }
   }
 }
 
 .linksnsignin {
-  width: 500px;
-  height: 50px;
-  // display: inline-block;
-  border: 1px solid black;
-  padding-top: 20px;
+  width: 400px;
+  height: 80px;
+  // border: 1px solid black;
+  float: right;
+  vertical-align: middle;
 }
 
-ul.account {
-  width: 500px;
+.account {
+  width: 350px;
+  height: 80px;
+  margin: 0px;
+  padding-left: 20px;
+  padding-top: 20px;
   list-style: none;
-  li {
-    width: 100px;
+  & li {
+    height: 20px;
     display: inline-block;
+    margin: 5px;  
+    & a {
+      width: 76px;
+      color: #0192B5;
+      text-decoration: none;
+      font-size: 14px;
+        &.cart {
+          font-size: 14px;
+          color: gray;
+        }  
+      &.login1 {
+        border: 1px solid #0192B5;
+        border-radius: 5px;
+        padding: 8px;
+      }
+        
+        // &:before {
+        //           content: '';
+        //           position: absolute;
+        //           display: block;
+        //           left: 230px;
+        //           top: -10px;
+        //           bottom: -2px;
+        //           background-color: green;
+        //           width: 2px;
+        // }
+      }
+    }
+
   }
+.selling {
+  position: absolute;
+  top: 30px;
+  bottom: 0;
+  right: 710px;
 }
+
+.register {
+  position: absolute;
+  top: 30px;
+  bottom: 0;
+  right: 640px;
+}
+
+.login {
+  position: absolute;
+  top: 30px;
+  right: 550px;
+}
+
+.shop {
+  position: absolute;
+  top: 40px;
+  right: 499px;
+  &:before {
+            content: '';
+            position: absolute;
+            display: block;
+            left: -10px;
+            top: -30px;
+            bottom: -5px;
+            background-color: gray;
+            width: 1px;
+  }          
+}
+
+.imgsrc1 {
+  position: absolute;
+  top: 20px;
+  right: 505px;
+}
+
+.rollin {
+  width: 20px;
+}
+
+
+
