--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,10 @@
 body {
   max-width: 100%; }
 
-[contenteditable="true"]:focus {
-  outline: none; }
-
 .header {
   width: 116.688em;
-  height: 80px; }
+  height: 80px;
+  border-bottom: 1px solid #E5E7E3; }
 
 .topcontent1 {
   width: 1050px;
@@ -15,26 +13,23 @@ body {
   box-sizing: border-box; }
 
 .logo {
-  width: 100px;
-  height: 50px;
   display: inline-block;
-  margin-right: 15px;
-  padding-top: 15px;
-  text-align: center; }
-  .logo a {
-    color: #F67000;
-    text-decoration: none;
-    font-size: 30px; }
+  clear: both;
+  margin-right: 20px;
+  box-sizing: border-box;
+  float: left;
+  width: 75px;
+  height: 80px;
+  margin-top: 20px; }
 
 .searchbar {
   width: 350px;
   height: 50px;
   display: inline-block;
+  clear: both;
   padding-top: 20px;
   vertical-align: middle; }
   .searchbar input {
-    box-sizing: border-box;
-    float: left;
     margin: 0px; }
     .searchbar input.button {
       width: 100px;
@@ -42,12 +37,16 @@ body {
       border-radius: 0 0.3em 0.3em 0;
       background-color: #51A6C1;
       color: white;
-      border: none; }
+      border: none;
+      box-sizing: border-box;
+      float: left; }
     .searchbar input.search {
       width: 250px;
       height: 35px;
       border-radius: 0.3em 0 0 0.3em;
-      border: 1px solid gray; }
+      border: 1px solid #E5E7E3;
+      box-sizing: border-box;
+      float: left; }
 
 .linksnsignin {
   width: 400px;
