--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,10 @@ body {
       .account li a.cart {
         font-size: 14px;
         color: gray; }
+        .account li a.cart:active {
+          color: gray; }
+        .account li a.cart:hover {
+          color: black; }
       .account li a.login1 {
         border: 1px solid #0192B5;
         border-radius: 5px;
@@ -106,7 +110,7 @@ body {
     left: -10px;
     top: -30px;
     bottom: -5px;
-    background-color: gray;
+    background-color: #E5E7E3;
     width: 1px; }
 
 .imgsrc1 {
