--- a/scss/main.scss
+++ b/scss/main.scss
@@ -93,26 +93,20 @@ body {
         &.cart {
           font-size: 14px;
           color: gray;
+          &:active {
+            color: gray
+          }
+          &:hover {
+            color: black;
+          }
         }  
       &.login1 {
         border: 1px solid #0192B5;
         border-radius: 5px;
         padding: 8px;
-      }
-        
-        // &:before {
-        //           content: '';
-        //           position: absolute;
-        //           display: block;
-        //           left: 230px;
-        //           top: -10px;
-        //           bottom: -2px;
-        //           background-color: green;
-        //           width: 2px;
-        // }
+        }
       }
     }
-
   }
 .selling {
   position: absolute;
@@ -145,7 +139,7 @@ body {
             left: -10px;
             top: -30px;
             bottom: -5px;
-            background-color: gray;
+            background-color: #E5E7E3;
             width: 1px;
   }          
 }
