--- a/scss/main.scss
+++ b/scss/main.scss
@@ -154,5 +154,32 @@ body {
   width: 20px;
 }
 
-// Second header with all links
+// Menu below with all links
+
+.menubelow {
+  width: 116.688em;
+  height: 40px;
+  border-bottom: 1px solid #E5E7E3;
+}
+
+.insidemenu {
+  width: 1050px;
+  height: 39px;
+  margin: 0 auto;
+  & a {
+    display: inline-block;
+    margin: 10px 13px 5px;
+    text-align: left;
+    font-size: 14px;
+    text-decoration: none;
+    color: #606060;
+    &:active {
+      color: #606060;
+    } 
+    &:hover {
+      color: black;
+    }
+  }
+}
+
 
