--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,11 @@
-body {
+  body {
   max-width: 100%;
 }
 
 //Very top header with logo and input fields
 
 .header {
-  width: 116.688em;
+  // width: 100%;
   height: 80px;
   border-bottom: 1px solid #E5E7E3;
 }
@@ -13,10 +13,11 @@ body {
 
 .topcontent1{
   width: 1050px;
-  height: 80px;
+  height: 80px; 
   // display: inline-block;
   margin: 0 auto;
   box-sizing: border-box;
+  overflow: hidden;
   // position: relative;
   // border: 1px solid black;
 }
@@ -28,8 +29,7 @@ body {
   box-sizing: border-box;
   float: left;
   width: 75px;
-  height: 80px;
-  margin-top: 20px;
+  margin-top: 27px;
 }
 
 .searchbar {
@@ -67,22 +67,26 @@ body {
 }
 
 .linksnsignin {
-  width: 400px;
+  // width: 400px;
   height: 80px;
   // border: 1px solid black;
-  float: right;
+  // float: right;
   vertical-align: middle;
+  display: inline-block;
+  overflow: hidden;
+  margin-left: 200px;
 }
 
 .account {
   width: 350px;
   height: 80px;
   margin: 0px;
-  padding-left: 20px;
-  padding-top: 20px;
+  padding-left: 0px;
+  padding-top: 7px;
   list-style: none;
+  float: right;
   & li {
-    height: 20px;
+    height: 40px;
     display: inline-block;
     margin: 5px;  
     & a {
@@ -108,56 +112,38 @@ body {
       }
     }
   }
-.selling {
-  position: absolute;
-  top: 30px;
-  bottom: 0;
-  right: 710px;
-}
+// .selling {
+//   position: absolute;
+//   top: 30px;
+//   bottom: 0;
+//   right: 710px;
+// }
 
-.register {
-  position: absolute;
-  top: 30px;
-  bottom: 0;
-  right: 640px;
-}
-
-.login {
-  position: absolute;
-  top: 30px;
-  right: 550px;
-}
-
+// .register {
+//   position: absolute;
+//   top: 30px;
+//   bottom: 0;
+//   right: 640px;
+// }
 .shop {
-  position: absolute;
-  top: 40px;
-  right: 499px;
-  &:before {
-            content: '';
-            position: absolute;
-            display: block;
-            left: -10px;
-            top: -30px;
-            bottom: -5px;
-            background-color: #E5E7E3;
-            width: 1px;
-  }          
+  width: 40px;
 }
 
-.imgsrc1 {
-  position: absolute;
-  top: 20px;
-  right: 505px;
-}
+// .imgsrc1 {
+//   position: absolute;
+//   top: 20px;
+//   right: 505px;
+// }
 
 .rollin {
+  display: inline !important;
   width: 20px;
 }
 
 // Menu below with all links
 
 .menubelow {
-  width: 116.688em;
+  // width: 116.688em;
   height: 40px;
   border-bottom: 1px solid #E5E7E3;
 }
@@ -166,10 +152,11 @@ body {
   width: 1050px;
   height: 39px;
   margin: 0 auto;
+  text-align: center;
   & a {
     display: inline-block;
     margin: 10px 13px 5px;
-    text-align: left;
+    // text-align: left;
     font-size: 14px;
     text-decoration: none;
     color: #606060;
