--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,6 +39,7 @@ body {
   // border: 1px solid black;
   padding-top: 20px;
   vertical-align: middle;
+  margin-bottom: 20px;
   & input {
     // box-sizing: border-box;
     // float: left;
@@ -158,8 +159,98 @@ body {
   width: 1000px;
   height: 4000px;
   margin: 0 auto;
-  border: 1px solid black;
-  background-color: green;
+  // border: 1px solid black;
+  background-color: #F5F5F1;
+}
+
+.clearbar {
+  width: 1000px;
+  height: 30px;
+  background-color: #F5F5F1;
+}
+
+.allmenus {
+  width: 25%;
+  height: 4000px;
+  background-color: #F5F5F1;
+  margin-right: 0px;
+  float: left;
+}
+
+.showresults {
+  background-color: #F5F5F1;
+  text-alight: left;
+  font-size: 13px;
+}
+
+.allcats {
+  font-size: 14px;
+}
+
+.menuone {
+  background-color: white;
+  border: 1px solid #E1E3DF;
+
+  & ul {
+    list-style: none;
+    li {
+      margin-top: 3px;
+      margin-bottom: 3px;
+    & a {
+      text-decoration: none;
+      font-size: 13px;
+      color: #3492C4;
+      &active {
+        color: #3492C4;
+      }
+    }
+    }
+  }
+}
+
+.refineresults {
+  background-color: #F5F5F1;
+  text-alight: left;
+  font-size: 13px;
+}
+
+.bubbles {
+  display: inline;
+}
+
+.itype{
+  font-size: 14px;
+  padding-top: 4px;
+}
+
+.menutwo {
+  background-color: white;
+  border-right: 10px solid #F5F5F1;
+  & ul {
+    list-style: none;
+    li {
+      margin-top: 5px;
+      margin-bottom: 5px;
+    & a {
+      text-decoration: none;
+      font-size: 13px;
+      color: #3492C4;
+      &active {
+        color: #3492C4;
+      }
+    }
+    }
+  }
+}
+
+//Below Content Right Side
+
+.piccontent {
+  width: 75%;
+  height: 4000px;
+  // background-color: yellow;
+  margin-right: 0px;
+  float: right;
 }
 
 
