--- a/css/main.css
+++ b/css/main.css
@@ -182,13 +182,16 @@ body {
 
 .itype {
   font-size: 14px;
-  padding-top: 4px; }
+  padding-top: 10px;
+  padding-left: 20px; }
 
 .menutwo {
   background-color: white;
   border-right: 10px solid #F5F5F1; }
   .menutwo ul {
-    list-style: none; }
+    list-style: none;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #E1E3DF; }
     .menutwo ul li {
       margin-top: 5px;
       margin-bottom: 5px; }
@@ -198,6 +201,36 @@ body {
         color: #3492C4; }
         .menutwo ul li aactive {
           color: #3492C4; }
+
+.priceline {
+  margin-bottom: 10px;
+  text-align: left;
+  font-size: 14px;
+  padding-left: 20px; }
+
+.inputprices {
+  margin-left: 20px; }
+  .inputprices span {
+    font-size: 12px; }
+
+.priceinput .hi {
+  width: 50px;
+  height: 30px;
+  border-radius: 3px;
+  border: 1px solid #D9D9D9; }
+
+.lo {
+  width: 50px;
+  height: 30px;
+  border-radius: 3px;
+  border: 1px solid #D9D9D9; }
+
+.pricebut {
+  width: 40px;
+  height: 30px;
+  background-color: white;
+  border: 1px solid #D9D9D9;
+  border-radius: 3px; }
 
 .piccontent {
   width: 75%;
