Completed left menus and starting layout for content on the right

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -226,7 +226,11 @@ body {
 
 .menutwo {
   background-color: white;
-  border-right: 10px solid #F5F5F1;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
   & ul {
     list-style: none;
     padding-bottom: 20px;
@@ -259,13 +263,18 @@ body {
     font-size: 12px;
   }
 }
+
 .priceinput {
-  & .hi {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #E1E3DF;
+}
+
+.hi {
     width: 50px;
     height: 30px;
     border-radius: 3px;
     border: 1px solid #D9D9D9;
-  }
+    margin-right: 5px;
 }
 
 .lo {
@@ -282,6 +291,110 @@ body {
   border: 1px solid #D9D9D9;
   border-radius: 3px;
 }
+
+.buticon:before { 
+  content: '▹';
+}
+
+.colors {
+  font-size: 14px;
+  padding-left: 20px;
+  margin-bottom: 5px;
+}
+
+.clrlist {
+  list-style: none;
+  padding-left: 20px;
+  margin-top: 5px;
+  border-bottom: 1px solid #E1E3DF;
+  & li {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    overflow: hidden;
+    & span {
+      font-size: 21px;
+    }
+  }
+}
+
+.redstuff {
+  background-color: red;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
+}
+
+.orangestuff {
+  background-color: orange;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
+}
+
+.yellowstuff {
+  background-color: yellow;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
+}
+
+.greenstuff {
+  background-color: green;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
+}
+
+.bluestuff {
+  background-color: blue;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
+}
+
+.purplestuff {
+  background-color: purple;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF; 
+}
+
+.blackstuff {
+  background-color: black;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
+}
+
+.whitestuff {
+  background-color: white;
+  border-radius: 3px;
+  border: 1px solid #E1E3DF;
+}
+
+.headings {
+  font-size: 14px;
+  padding-left: 20px;
+  margin-bottom: 5px;
+}
+
+.checkbox {
+  margin-right: 5px;
+}
+
+.theoptions {
+  border-bottom: 1px solid #E1E3DF;
+}
+
+.radio {
+  margin-right: 5px;
+}
+
+.selctions {
+  border: 1px solid #E1E3DF;
+  display: block;
+  font-family: inherit;
+  font-size: 14px;
+  height: 38px;
+  padding-left: 12px;
+  padding-right: 12px;
+  width: 90%;
+}
+
 //Below Content Right Side
 
 .piccontent {
