--- a/css/main.css
+++ b/css/main.css
@@ -330,5 +330,127 @@ body {
 .piccontent {
   width: 75%;
   height: 4000px;
+  background-color: #F5F5F1;
   margin-right: 0px;
   float: right; }
+
+.topofmain {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3px; }
+  .topofmain::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+.leftside {
+  float: left;
+  font-size: 13px;
+  padding-top: 14px; }
+
+.rightside {
+  float: right;
+  font-size: 13px;
+  padding-top: 14px; }
+
+li.block {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 23.23176%;
+  background-color: white;
+  width: 230px;
+  height: 220px;
+  margin: 10px;
+  font-size: 12px;
+  border-radius: 3px; }
+  li.block:last-child {
+    margin-right: 0; }
+  li.block:nth-child(3n) {
+    margin-right: 0; }
+  li.block:nth-child(3n+1) {
+    clear: left; }
+
+.titleof {
+  overflow-y: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  wordwrap: pre-wrap;
+  display: inline-block;
+  width: 230px; }
+
+.priceof {
+  display: inline-block;
+  float: right;
+  color: #8FB856;
+  padding-right: 5px; }
+
+.shopof {
+  display: inline-block;
+  float: left; }
+
+.imghelp {
+  width: 230px;
+  height: 143px; }
+
+.shopname {
+  text-decoration: none;
+  color: #A9ABBB; }
+
+.container {
+  display: inline-block; }
+
+.pageturning {
+  display: inline-block;
+  padding-left: 10px; }
+
+.prevnext {
+  width: 34px;
+  height: 40px;
+  float: left;
+  background-color: white;
+  border-radius: 3px 0px 0px 3px;
+  border: 1px solid #D9D9D9;
+  font-weight: bold; }
+
+.nextprev {
+  width: 34px;
+  height: 40px;
+  float: left;
+  background-color: white;
+  border-radius: 0px 3px 3px 0px;
+  border: 1px solid #D9D9D9;
+  font-weight: bold; }
+
+.numbaz {
+  width: 36px;
+  height: 40px;
+  float: left;
+  background-color: white;
+  border: 1px solid #D9D9D9; }
+
+div.favstuff {
+  position: relative;
+  float: left;
+  margin: 5px; }
+
+div.favstuff:hover img {
+  opacity: 0.5; }
+
+div.favstuff:hover input {
+  display: block; }
+
+div.favstuff input {
+  position: absolute;
+  display: none; }
+
+div.favstuff input.hambug {
+  top: 0;
+  left: 85%; }
+
+div.favstuff input.heart {
+  top: 0;
+  left: 70%; }
