Catching a tags with the wrong colors and text decoration

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -505,6 +505,11 @@ li.block {
   border: 1px solid #D9D9D9;
 }
 
+.bluetext {
+  text-decoration: none;
+  color: #0192B5;
+}
+
 // Button overlay on top of pic
 
 div.favstuff {
