--- a/css/main.css
+++ b/css/main.css
@@ -432,6 +432,10 @@ li.block {
   background-color: white;
   border: 1px solid #D9D9D9; }
 
+.bluetext {
+  text-decoration: none;
+  color: #0192B5; }
+
 div.favstuff {
   position: relative;
   float: left;
