--- a/scss/main.scss
+++ b/scss/main.scss
@@ -62,6 +62,8 @@ body {
       border: 1px solid #E5E7E3;
       box-sizing: border-box;
       float: left;
+      background-color: #FBFBFA;
+      padding-left: 10px;
     }
   }
 }
